--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Find Your Next Stay</h1>
             <div class="search-bar">
                 <form>
-                    <div>
+                    <div class="location-input">
                         <label>Location</label>
                         <input type="text" placeholder="Where are you going">
                     </div>
@@ -44,7 +44,124 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <h2 class="sub-title">Exclusives</h2>
+        <div class="exclusives">
+            <div>
+                <img src="images/image-1.png" alt="image-1">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-2.png" alt="image-2">
+                <span>
+                    <h3>Switzerland</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-3.png" alt="image-3">
+                <span>
+                    <h3>Australia</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-4.png" alt="image-4">
+                <span>
+                    <h3>France</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-5.png" alt="image-5">
+                <span>
+                    <h3>Amsterdam</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-6.png" alt="image-6">
+                <span>
+                    <h3>Netherlands</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-7.png" alt="image-7">
+                <span>
+                    <h3>New York</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-8.png" alt="image-8">
+                <span>
+                    <h3>Chicago</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-9.png" alt="image-9">
+                <span>
+                    <h3>San Francisco</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-10.png" alt="image-10">
+                <span>
+                    <h3>Shanghai</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </div>
+        </div>
 
+        <h2 class="sub-title">Trending Places</h2>
+        <div class="trending">
+            <div>
+                <img src="images/dubai.png" alt="dubai">
+                <h3>Dubai</h3>
+            </div>
+            <div>
+                <img src="images/new-york.png" alt="new-york">
+                <h3>New York</h3>
+            </div>
+            <div>
+                <img src="images/paris.png" alt="paris">
+                <h3>Paris</h3>
+            </div>
+            <div>
+                <img src="images/new-delhi.png" alt="new delhi">
+                <h3>New Delhi</h3>
+            </div>
+        </div>
+
+        <div class="cta">
+            <h3>Sharing <br> Is Earning Now</h3>
+            <p>Great oppotunity to make money by <br> sharing your extra space</p>
+            <a href="#" class="cta-btn">Know More</a>
+        </div>
+
+        <h2 class="sub-title">Travellers Stories</h2>
+        <div class="stories">
+            <div>
+                <img src="images/story-1.png" alt="story">
+                <p>Popular European counties with a budget of just $10,000</p>
+            </div>
+            <div>
+                <img src="images/story-2.png" alt="story">
+                <p>Popular European counties with a budget of just $10,000</p>
+            </div>
+            <div>
+                <img src="images/story-3.png" alt="story">
+                <p>Popular European counties with a budget of just $10,000</p>
+            </div>
+        </div>
+        <a href="#" class="start-btn">Start making money</a>
+    </div>
 
 </body>
 </html>
